# chopper

./: .gitignore  README.md  audio_devices.py  cli.py  play_audio.py  pyproject.toml  requirements.txt  setup.py
chopper/: __init__.py  cli.py  play_audio.py  record_snippets.py
